<resources>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_vcard_type">default</string>
    <string name="config_export_dir">/mnt/sdcard</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="config_prohibited_phone_number_regexp" />
    <string name="launcherDialer">Phone</string>
    <string name="people">People</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Select a contact</string>
    <string name="contactMultiPickerActivityTitle">Select contacts</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_dialpad">Call</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="menu_new_favorite_action_bar">New</string>
    <string name="splitConfirmation_title">Separate contact</string>
    <string name="splitConfirmation">Are you sure you want to separate this single contact into multiple contacts?</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Select the contact you want to join with %s.</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact does not exist.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts</string>
    <string name="noGroups">No groups</string>
    <string name="noAccounts">To create groups you need an account</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="savingContact">Saving contact…</string>
    <string name="savingDisplayGroups">Saving display options…</string>
    <string name="contactSavedToast">Contact saved</string>
    <string name="contactSavedErrorToast">Error, unable to save contact changes.</string>
    <string name="groupSavedToast">Group saved</string>
    <string name="groupSavedErrorToast">Error, unable to save group changes.</string>
    <string name="listTotalAllContactsZeroStarred">No Favorites</string>
    <string name="foundTooManyContacts">more than %d found</string>
    <string name="listFoundAllContactsZero">Not found</string>
    <string name="contactsAllLabel">All</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="liveFolderAll">All contacts</string>
    <string name="liveFolderFavorites">Starred contacts</string>
    <string name="liveFolderPhone">Contacts with phone numbers</string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="recentCalls_empty">Call log is empty.</string>
    <string name="clearCallLogConfirmation_title">Clear call log</string>
    <string name="clearCallLogConfirmation">Are you sure you want to clear the call log?</string>
    <string name="clearCallLogProgress_title">Clearing call log</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="voicemail">Voicemail</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="dialerDialpadHintText">Dial to add a call</string>
    <string name="simContacts_emptyLoading">Loading from SIM card…</string>
    <string name="simContacts_title">SIM card contacts</string>
    <string name="noContactsHelpTextWithSyncForCreateShortcut">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)"</string>
    <string name="noContactsHelpTextForCreateShortcut">"You don't have any contacts to display."</string>
    <string name="noContactsHelpText">"You don't have any contacts to display.

To add contacts, press "<b><font fgcolor="#ffffffff">Menu</font></b>" and touch:
 
"<b><font fgcolor="#ffffffff"><li>"Accounts to add or configure an account with contacts you can sync to the phone
"</li></font></b>" 
"<b><font fgcolor="#ffffffff"><li>"New contact to create a new contact from scratch
"</li></font></b>" 
"<b><font fgcolor="#ffffffff"><li>"Import/Export to import contacts from your SIM or SD card
"</li></font></b>"
"</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="import_from_sim">Import from SIM card</string>
    <string name="import_from_sdcard">Import from storage</string>
    <string name="export_to_sdcard">Export to storage</string>
    <string name="share_visible_contacts">Share visible contacts</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="menu_share">Share</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="upgrade_out_of_memory_uninstall">Uninstall some applications</string>
    <string name="upgrade_out_of_memory_retry">Retry upgrade</string>
    <string name="menu_settings">Settings</string>
    <string name="preference_displayOptions">Display options</string>
    <string name="contacts_unavailable_create_contact">Create a new contact</string>
    <string name="contacts_unavailable_add_account">Sign in to an account</string>
    <string name="contacts_unavailable_import_contacts">Import contacts from a file</string>
    <string name="menu_send_to_desktop">Send to homescreen</string>
    <string name="callrecordview_menu_delete">Delete call log</string>
    <string name="callrecordview_menu_settings">Settings</string>
    <string name="callrecordview_menu_show">Call log filter</string>
    <string name="callrecordview_menu_paste">Paste</string>
    <string name="openDialKeyboard">Dial pad</string>
    <string name="empty_divider_title">You can</string>
    <string name="noContactHelpTextAccountsInfo">Sync Google, Exchange contacts.</string>
    <string name="sync_xiaomi_cloud_contacts">Restore from online backup</string>
    <string name="noContactHelpTextImportXiaomiAccountInfo">Restore data backed up in Xiaomi account and MiTalk</string>
    <string name="select_all">Select all</string>
    <string name="preference_import">Import</string>
    <string name="preference_export">Export</string>
    <string name="preference_others">Others</string>
    <string name="wipe_data">Clear data</string>
    <string name="check_unsynchronized_accounts">Check unsynchronized frequency</string>
    <string name="display_only_phones">Only show contacts with phone number</string>
    <string name="display_sim_contacts">Show SIM contacts</string>
    <string name="preference_sim">SIM Card</string>
    <string name="preference_remove_duplicate">Merge duplicate contacts</string>
    <string name="delete_duplicate">Batch merge</string>
    <string name="label_no_duplicate_contacts">Great! No duplicate contacts for now!</string>
</resources>