<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_displayOptions" android:key="displayOptions">
        <com.android.contacts.preference.SortOrderPreference android:title="@string/display_options_sort_list_by" android:key="sortOrder" android:dialogTitle="@string/display_options_sort_list_by" />
        <com.android.contacts.preference.DisplayOrderPreference android:title="@string/display_options_view_names_as" android:key="displayOrder" android:dialogTitle="@string/display_options_view_names_as" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_import">
        <PreferenceScreen android:title="@string/import_from_sdcard" android:key="pref_key_import_from_sdcard" />
        <PreferenceScreen android:title="@string/sync_xiaomi_cloud_contacts" android:key="pref_key_import_from_mi_cloud" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_export">
        <PreferenceScreen android:title="@string/export_to_sdcard" android:key="pref_key_export_to_sdcard" />
        <PreferenceScreen android:title="@string/share_visible_contacts" android:key="pref_key_share_visible_contacts" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_sim" android:key="displaySim">
        <PreferenceScreen android:title="@string/import_from_sim" android:key="pref_key_import_from_sim" />
        <CheckBoxPreference android:persistent="false" android:title="@string/display_sim_contacts" android:key="pref_key_display_sim_contacts" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_others">
        <CheckBoxPreference android:persistent="true" android:title="@string/display_only_phones" android:key="only_phones" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/preference_remove_duplicate" android:key="pref_key_remove_duplicate_contact" />
        <PreferenceScreen android:title="@string/wipe_data" android:key="pref_key_wipe_data" />
        <com.android.contacts.preference.CheckUnsynchronizedPreference android:title="@string/check_unsynchronized_accounts" android:key="pref_key_check_unsynchronized_accounts" android:dialogTitle="@string/check_unsynchronized_accounts" />
    </PreferenceCategory>
</PreferenceScreen>
