<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_search" android:id="@id/menu_search" android:title="@string/menu_search" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_dialpad" android:id="@id/menu_dialpad" android:title="@string/menu_dialpad" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_add_contact" android:id="@id/menu_add_contact" android:title="@string/menu_new_contact_action_bar" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_add_group" android:id="@id/menu_add_group" android:title="@string/menu_new_group_action_bar" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_add_favorite" android:id="@id/menu_add_favorite" android:title="@string/menu_new_favorite_action_bar" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_import_export_holo_light" android:id="@id/menu_import_export" android:title="@string/menu_import_export" />
    <item android:icon="@drawable/ic_menu_accounts_holo_light" android:id="@id/menu_accounts" android:title="@string/menu_accounts" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_settings" android:title="@string/menu_settings" />
</menu>
