<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ex="http://schemas.android.com/apk/res/com.android.contacts">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:src="@drawable/list_empty_image" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_gravity="center_horizontal" android:id="@id/secondary_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:background="@drawable/list_section_divider_holo_custom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/empty_divider_title" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/add_account_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contacts_unavailable_add_account" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/noContactHelpTextAccountsInfo" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/sync_micloud_contacts_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sync_xiaomi_cloud_contacts" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/noContactHelpTextImportXiaomiAccountInfo" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/import_sim_contacts_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/import_from_sim" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/import_contacts_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contacts_unavailable_import_contacts" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/create_contact_button" android:background="@drawable/btn_import_contact_last_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contacts_unavailable_create_contact" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/import_failure_uninstall_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_out_of_memory_uninstall" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/import_failure_retry_button" android:background="@drawable/btn_import_contact_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_out_of_memory_retry" />
            </LinearLayout>
            <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/progress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
